--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -96,4 +96,5 @@ foreach (src ${GUIplugins})
 endforeach (src ${GUIplugins})
 
 add_subdirectory(events)
+add_subdirectory(events2)
 add_subdirectory(rest_web)
