in the middle of JointEvent
--HG--
branch : joint_sim_events

--- a/plugins/events/CMakeLists.txt
+++ b/plugins/events/CMakeLists.txt
@@ -7,6 +7,7 @@ set (src
   EventSource.cc
   ExistenceEventSource.cc
   InRegionEventSource.cc
+  JointEventSource.cc
   OccupiedEventSource.cc
   Region.cc
   SimEventsPlugin.cc
@@ -17,6 +18,7 @@ set (inc
   EventSource.hh
   ExistenceEventSource.hh
   InRegionEventSource.hh
+  JointEventSource.hh
   OccupiedEventSource.hh
   Region.hh
   SimEventsException.hh
