adds integration tests for region event plugin
--HG--
branch : mentor2_v2

--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -74,6 +74,7 @@ set(tests
   sensor.cc
   server_fixture.cc
   sim_events.cc
+  region_events.cc
   speed.cc
   speed_thread_pr2.cc
   stress_spawn_models.cc
