Adds unit tests for VisualConfig
--HG--
branch : mentor2_v2

--- a/gazebo/gui/model/CMakeLists.txt
+++ b/gazebo/gui/model/CMakeLists.txt
@@ -50,6 +50,7 @@ if (ENABLE_SCREEN_TESTS)
   set (qt_tests ${qt_tests}
     JointMaker_TEST.cc
     CollisionConfig_TEST.cc
+    VisualConfig_TEST.cc
     ExtrudeDialog_TEST.cc
     ModelCreator_TEST.cc
     ModelData_TEST.cc
