--- a/gazebo/gui/model/CMakeLists.txt
+++ b/gazebo/gui/model/CMakeLists.txt
@@ -53,6 +53,7 @@ if (ENABLE_SCREEN_TESTS)
     VisualConfig_TEST.cc
     LinkConfig_TEST.cc
     ExtrudeDialog_TEST.cc
+    GraphScene_TEST.cc
     ModelCreator_TEST.cc
     ModelData_TEST.cc
     ModelEditor_TEST.cc
