refactor wrench, applywrench, contact, visuals and update grid to use visual, update transparency, add tests
--HG--
branch : visual_refactor

--- a/gazebo/rendering/CMakeLists.txt
+++ b/gazebo/rendering/CMakeLists.txt
@@ -154,6 +154,7 @@ set (gtest_sources_dri
   COMVisual_TEST.cc
   GpuLaser_TEST.cc
   Heightmap_TEST.cc
+  InertiaVisual_TEST.cc
   JointVisual_TEST.cc
   Light_Rendering_TEST.cc
   LinkFrameVisual_TEST.cc
@@ -163,6 +164,7 @@ set (gtest_sources_dri
   SonarVisual_TEST.cc
   TransmitterVisual_TEST.cc
   Visual_TEST.cc
+  WrenchVisual_TEST.cc
 )
 
 gz_build_dri_tests(${gtest_sources_dri})
