--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -150,6 +150,7 @@ gz_build_dri_tests(${dri_tests})
 set(qt_tests
   insert_model.cc
   model_editor.cc
+  track_visual.cc
   undo.cc
   visual_pose.cc
 )
