--- a/gazebo/util/CMakeLists.txt
+++ b/gazebo/util/CMakeLists.txt
@@ -43,6 +43,7 @@ set (headers
 
 set (gtest_sources
   Diagnostics_TEST.cc
+  IntrospectionManager_TEST.cc
   LogPlay_TEST.cc
   LogRecord_TEST.cc
   OpenAL_TEST.cc
