Declare methods containing msgs private and create public methods with std::set for dealing with filters.
--HG--
branch : introspection

--- a/gazebo/msgs/CMakeLists.txt
+++ b/gazebo/msgs/CMakeLists.txt
@@ -19,6 +19,7 @@ set (msgs
   cylindergeom.proto
   diagnostics.proto
   distortion.proto
+  empty.proto
   factory.proto
   fluid.proto
   fog.proto
