Testing an example.
--HG--
branch : introspection_p3

--- a/gazebo/util/CMakeLists.txt
+++ b/gazebo/util/CMakeLists.txt
@@ -35,6 +35,8 @@ endif()
 
 set (headers
   Diagnostics.hh
+  IntrospectionClient.hh
+  IntrospectionManager.hh
   LogPlay.hh
   LogRecord.hh
   OpenAL.hh
