make qwt required dependency
--HG--
branch : plot_p1

--- a/gazebo/gui/CMakeLists.txt
+++ b/gazebo/gui/CMakeLists.txt
@@ -159,10 +159,7 @@ add_subdirectory(viewers)
 add_subdirectory(terrain)
 add_subdirectory(building)
 add_subdirectory(model)
-
-if (HAVE_QWT)
 add_subdirectory(plot)
-endif()
 
 if (HAVE_GRAPHVIZ)
   add_definitions(-DWITH_CGRAPH)
@@ -220,14 +217,11 @@ target_link_libraries(gazebo_gui
   ${ogre_libraries}
   ${Boost_LIBRARIES}
   ${tinyxml_LIBRARIES}
+  ${QWT_LIBRARY}
 )
 
 if (UNIX)
   target_link_libraries(gazebo_gui pthread)
-endif()
-
-if (HAVE_QWT)
-  target_link_libraries(gazebo_gui ${QWT_LIBRARY})
 endif()
 
 if (HAVE_GRAPHVIZ)
