Working on a more generic URI class.
--HG--
branch : introspection_part4

--- a/gazebo/common/CMakeLists.txt
+++ b/gazebo/common/CMakeLists.txt
@@ -66,7 +66,7 @@ set (sources
   SVGLoader.cc
   Time.cc
   Timer.cc
-  Uri.cc
+  URI.cc
   Video.cc
   ffmpeg_inc.cc
 )
@@ -122,7 +122,7 @@ set (headers
   Time.hh
   Timer.hh
   UpdateInfo.hh
-  Uri.hh
+  URI.hh
   Video.hh
   ffmpeg_inc.h
  )
@@ -151,7 +151,7 @@ set (gtest_sources
   SystemPaths_TEST.cc
   SVGLoader_TEST.cc
   Time_TEST.cc
-  Uri_TEST.cc
+  URI_TEST.cc
 )
 
 # Timer test fails on OSX
