Added basic support for gnu precompiled headers
currently enabled in transport, physics, rendering, and math
a custom target called gazebo_pch was added, and one pch is used for all projects

TODO:
 - improve how flags are captured in order to compile the pch
 - record some more timing information to figure out if this is actually faster
 - generate multiple pch, since some libraries (common) use -pthread and so have extra flags

Priliminary timing info:

gazebo common (needs -pthread when building pch)
no pch: 2m
pch: 1m 30s

gazebo math
no pch: 25s
pch: 35s

gazebo physics
no pch: 11m 15s
pch: 9m 25s

gazebo transport
no pch: 1m
pch: 50s

gazebo rendering
no pch: 30m
pch: 40m

--HG--
branch : pch

--- a/gazebo/physics/CMakeLists.txt
+++ b/gazebo/physics/CMakeLists.txt
@@ -175,6 +175,11 @@ if (HAVE_GDAL)
   target_link_libraries(gazebo_physics ${GDAL_LIBRARY})
 endif()
 
+if (USE_PCH)
+  target_compile_options(gazebo_physics PRIVATE -Winvalid-pch -include gazebo/gazebo_pch.hh)
+  add_dependencies(gazebo_physics gazebo_pch)
+endif()
+
 gz_install_library(gazebo_physics)
 gz_install_includes("physics" ${headers} ${CMAKE_CURRENT_BINARY_DIR}/physics.hh)
 
