--- a/gazebo/rendering/CMakeLists.txt
+++ b/gazebo/rendering/CMakeLists.txt
@@ -203,5 +203,10 @@ if (NOT APPLE AND NOT WIN32)
   target_link_libraries(gazebo_rendering X11)
 endif()
 
+if (USE_PCH)
+  target_compile_options(gazebo_rendering PRIVATE -Winvalid-pch -include gazebo/gazebo_pch.hh)
+  add_dependencies(gazebo_rendering gazebo_pch)
+endif()
+
 gz_install_library(gazebo_rendering)
 gz_install_includes("rendering" ${headers} ${CMAKE_CURRENT_BINARY_DIR}/rendering.hh)
