--- a/gazebo/math/CMakeLists.txt
+++ b/gazebo/math/CMakeLists.txt
@@ -78,5 +78,10 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBUILDING_DLL_GZ_MATH")
 gz_add_library(gazebo_math ${sources})
 target_link_libraries(gazebo_math ${Boost_LIBRARIES} ${IGNITION-MATH_LIBRARIES})
 
+if (USE_PCH)
+  target_compile_options(gazebo_math PRIVATE -Winvalid-pch -include gazebo/gazebo_pch.hh)
+  add_dependencies(gazebo_math gazebo_pch)
+endif()
+
 gz_install_library(gazebo_math)
 gz_install_includes("math" ${headers} ${CMAKE_CURRENT_BINARY_DIR}/gzmath.hh)
