--- a/gazebo/gui/plot/CMakeLists.txt
+++ b/gazebo/gui/plot/CMakeLists.txt
@@ -25,6 +25,7 @@ set (headers_install
 
 set (qt_tests_local
   IncrementalPlot_TEST.cc
+  Palette_TEST.cc
   PlotCanvas_TEST.cc
   PlotCurve_TEST.cc
   PlotWindow_TEST.cc
