Tested and tweaked pch configuration
currently using cmake macro
this doesn't extend well like Qt which need lots of extra flags

Some timing information, but it seems like 50% overall is a reasonable goal for this endeavor

gazebo_common: 3m 32s -> 1m 20s
gazebo_transport: 1m 10s -> 45s
gazebo_math: 25s -> 12s

--HG--
branch : pch

--- a/gazebo/physics/CMakeLists.txt
+++ b/gazebo/physics/CMakeLists.txt
@@ -176,7 +176,7 @@ if (HAVE_GDAL)
 endif()
 
 if (USE_PCH)
-  add_pch(gazebo_physics physics_pch.in.hh)
+  add_pch(gazebo_physics physics_pch.hh)
 endif()
 
 gz_install_library(gazebo_physics)
