--- a/gazebo/rendering/CMakeLists.txt
+++ b/gazebo/rendering/CMakeLists.txt
@@ -204,7 +204,7 @@ if (NOT APPLE AND NOT WIN32)
 endif()
 
 if (USE_PCH)
-  add_pch(gazebo_rendering rendering_pch.in.hh)
+  add_pch(gazebo_rendering rendering_pch.hh)
 endif()
 
 gz_install_library(gazebo_rendering)
