--- a/gazebo/CMakeLists.txt
+++ b/gazebo/CMakeLists.txt
@@ -16,6 +16,7 @@ link_directories(
   ${PROJECT_BINARY_DIR}/test
   ${TBB_LIBRARY_DIR}
   ${CURL_LIBDIR}
+  ${IGNITION-MATH_LIBRARY_DIRS}
 )
 
 if (WIN32)
