--- a/gazebo/util/CMakeLists.txt
+++ b/gazebo/util/CMakeLists.txt
@@ -6,9 +6,14 @@ if (HAVE_OPENAL)
   include_directories(${OPENAL_INCLUDE_DIR})
 endif()
 
-include_directories(${TBB_INCLUDEDIR})
+include_directories(${CMAKE_SOURCE_DIR}/deps/win/tinyxml2)
 
-include_directories(${tinyxml_INCLUDE_DIRS})
+message (STATUS "\n\n\n ${tinyxml2_INCLUDE_DIRS}\n\n")
+include_directories(${TBB_INCLUDEDIR} ${tinyxml_INCLUDE_DIRS}
+                    ${tinyxml2_INCLUDE_DIRS})
+
+link_directories(${tinyxml2_LIBRARY_DIRS})
+
 set (sources
   Diagnostics.cc
   LogPlay.cc
@@ -17,7 +22,6 @@ set (sources
 )
 
 if (NOT USE_EXTERNAL_TINYXML)
-  include_directories (${CMAKE_SOURCE_DIR}/deps/win/tinyxml)
   set (sources ${sources}
        ${CMAKE_SOURCE_DIR}/deps/win/tinyxml/tinystr.cpp
        ${CMAKE_SOURCE_DIR}/deps/win/tinyxml/tinyxml.cpp
@@ -26,7 +30,6 @@ if (NOT USE_EXTERNAL_TINYXML)
 endif()
 
 if (NOT USE_EXTERNAL_TINYXML2)
-  include_directories (${CMAKE_SOURCE_DIR}/deps/win/tinyxml2)
   set (sources ${sources}
        ${CMAKE_SOURCE_DIR}/deps/win/tinyxml2/tinyxml2.cpp)
 endif()
