--- a/cmake/gazebo-config.cmake.in
+++ b/cmake/gazebo-config.cmake.in
@@ -77,6 +77,24 @@ list(APPEND @PKG_NAME@_LIBRARY_DIRS @CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_LIBDIR
 list(APPEND @PKG_NAME@_CFLAGS -I@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_INCLUDEDIR@)
 list(APPEND @PKG_NAME@_CFLAGS -I@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_INCLUDEDIR@/gazebo-@GAZEBO_MAJOR_VERSION@)
 
+# Set whether Gazebo was built with Bullet support
+set (HAVE_BULLET @HAVE_BULLET@)
+
+# Set whether Gazebo was built with Simbody support
+set (HAVE_SIMBODY @HAVE_SIMBODY@)
+
+if (HAVE_BULLET)
+  find_package(bullet REQUIRED)
+  list(APPEND @PKG_NAME@_INCLUDE_DIRS ${BULLET_INCLUDE_DIRS})
+  list(APPEND @PKG_NAME@_LIBRARIES ${BULLET_LIBRARIES})
+endif()
+
+if (HAVE_SIMBODY)
+  find_package(simbody REQUIRED)
+  list(APPEND @PKG_NAME@_INCLUDE_DIRS ${Simbody_INCLUDE_DIR})
+  list(APPEND @PKG_NAME@_LIBRARIES ${Simbody_LIBRARIES})
+endif()
+
 # Visual Studio enables c++11 support by default
 if (NOT MSVC)
   list(APPEND @PKG_NAME@_CXX_FLAGS -std=c++11)
@@ -106,34 +124,33 @@ execute_process(COMMAND pkg-config --variable=prefix OGRE
 set(CMAKE_MODULE_PATH
   "${OGRE_INSTALL_PREFIX}/share/OGRE/cmake/modules;${OGRE_INSTALL_PREFIX}/lib/OGRE/cmake;${OGRE_INSTALL_PREFIX}/CMake;${CMAKE_MODULE_PATH}")
 
-foreach(dep @PKG_DEPENDS@)
-  if(NOT ${dep}_FOUND)
-    if (${dep} MATCHES "Boost")
-      find_package(Boost @MIN_BOOST_VERSION@ REQUIRED thread signals system filesystem program_options regex iostreams date_time)
-    else()
-      find_package(${dep} REQUIRED)
-    endif()
-  endif()
-  list(APPEND @PKG_NAME@_INCLUDE_DIRS ${${dep}_INCLUDE_DIRS})
+# Find boost
+find_package(Boost @MIN_BOOST_VERSION@ REQUIRED thread signals system
+  filesystem program_options regex iostreams date_time)
+list(APPEND @PKG_NAME@_INCLUDE_DIRS ${boost_INCLUDE_DIRS})
+list(APPEND @PKG_NAME@_LIBRARIES ${boost_LIBRARIES})
 
-  # Protobuf needs to be capitalized to match PROTOBUF_LIBRARIES
-  if (${dep} STREQUAL "Protobuf")
-    string (TOUPPER ${dep} dep_lib)
-  else()
-    set (dep_lib ${dep})
-  endif()
+# Find protobuf
+find_package(Protobuf REQUIRED)
+list(APPEND @PKG_NAME@_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS})
+list(APPEND @PKG_NAME@_LIBRARIES ${PROTOBUF_LIBRARIES})
 
-  list(APPEND @PKG_NAME@_LIBRARIES ${${dep_lib}_LIBRARIES})
+# Find SDFormat
+find_package(SDFormat REQUIRED)
+list(APPEND @PKG_NAME@_INCLUDE_DIRS ${SDFormat_INCLUDE_DIRS})
+list(APPEND @PKG_NAME@_LIBRARIES ${SDFormat_LIBRARIES})
 
-  # When including OGRE, also include the Terrain and Paging components
-  if (${dep} STREQUAL "OGRE")
-    list(APPEND GAZEBO_INCLUDE_DIRS ${OGRE_Terrain_INCLUDE_DIRS}
-      ${OGRE_Paging_INCLUDE_DIRS})
-    list(APPEND GAZEBO_LIBRARIES ${OGRE_Terrain_LIBRARIES}
-      ${OGRE_Paging_LIBRARIES})
-  endif()
-endforeach()
+# Find OGRE
+find_package(OGRE REQUIRED)
+list(APPEND @PKG_NAME@_INCLUDE_DIRS ${OGRE_INCLUDE_DIRS})
+list(APPEND @PKG_NAME@_LIBRARIES ${OGRE_LIBRARIES})
+# When including OGRE, also include the Terrain and Paging components
+list(APPEND GAZEBO_INCLUDE_DIRS ${OGRE_Terrain_INCLUDE_DIRS}
+  ${OGRE_Paging_INCLUDE_DIRS})
+list(APPEND GAZEBO_LIBRARIES ${OGRE_Terrain_LIBRARIES}
+  ${OGRE_Paging_LIBRARIES})
 
+# Find Ignition Math
 find_package(ignition-math2 REQUIRED)
 list(APPEND @PKG_NAME@_INCLUDE_DIRS ${IGNITION-MATH_INCLUDE_DIRS})
 list(APPEND @PKG_NAME@_LIBRARY_DIRS ${IGNITION-MATH_LIBRARY_DIRS})
