--- a/cmake/gazebo-config.cmake.in
+++ b/cmake/gazebo-config.cmake.in
@@ -84,7 +84,21 @@ list(APPEND @PKG_NAME@_CFLAGS -I@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_INCLUDEDIR
 list(APPEND @PKG_NAME@_CFLAGS -I@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_INCLUDEDIR@/gazebo-@GAZEBO_MAJOR_VERSION@)
 
 if (GAZEBO_HAS_BULLET)
-  find_package(bullet REQUIRED)
+  pkg_check_modules(BULLET bullet>=2.82)
+  if (NOT BULLET_FOUND)
+     pkg_check_modules(BULLET bullet2.82>=2.82)
+  endif()
+
+  if (BULLET_FOUND)
+    add_definitions(-DLIBBULLET_VERSION=${BULLET_VERSION})
+  else()
+    message(FATAL_ERROR "Bullet > 2.82 not found, please install libbullet2.82-dev.")
+  endif()
+
+  if (BULLET_VERSION VERSION_GREATER 2.82)
+    add_definitions(-DLIBBULLET_VERSION_GT_282)
+  endif()
+
   list(APPEND @PKG_NAME@_INCLUDE_DIRS ${BULLET_INCLUDE_DIRS})
   list(APPEND @PKG_NAME@_LIBRARIES ${BULLET_LIBRARIES})
 endif()
