add test, style, revert sample size, remove unused code
--HG--
branch : plot_p5

--- a/gazebo/gui/plot/CMakeLists.txt
+++ b/gazebo/gui/plot/CMakeLists.txt
@@ -27,6 +27,7 @@ set (headers_install
 )
 
 set (qt_tests_local
+  EditableLabel_TEST.cc
   IntrospectionCurveHandler_TEST.cc
   IncrementalPlot_TEST.cc
   Palette_TEST.cc
